--- a/templates/blocks/_footer.html.twig
+++ b/templates/blocks/_footer.html.twig
@@ -1,11 +1,11 @@
 <footer class="footer-page transparent">
     <div class="footer-copyright">
         <div class="container">
-            <ul class="black-text center-align">
+            <ul class=" center-align">
                 <li class="attribution_title">Attributions</li>
                 <li><a class="grey-text" href="https://fontawesome.com/license" >FontAwesome License</a></li>
             </ul>
-            <p class="center-align black-text">
+            <p class="center-align ">
                 &copy; Charlotte Saidi. 2022.
             </p>
         </div>
