--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -13,27 +13,27 @@
 
             <div id="competences" class="section scrollspy js-competence">
                 <div class="container">
-                <h6 class="competences black-text">ENV</h6>    
+                <h6 class="competences ">ENV</h6>    
                 {% include "blocks/components/svgs/_brands_shuffle.html.twig" %}
                 </div>  
             </div>
 
             <div id="portfolio" class="section scrollspy js-portfolio">
                 <div class="container">
-                    <h6 class="competences black-text">PORTFOLIO</h6>
+                    <h6 class="competences ">PORTFOLIO</h6>
                     {% include "blocks/_project.html.twig" %}
                 </div>
             </div>
 
             <div id="formations" class="section scrollspy js-education">
                 <div class="container">
-                    <h6 class="center-align competences black-text">PARCOURS</h6>
+                    <h6 class="center-align competences ">PARCOURS</h6>
                     <div class="row formations">
                         {% include "blocks/_education.html.twig" %}
                     </div>
                 </div>
             </div>
-
+  
             {% include "blocks/_contact.html.twig" %}
             {% include "blocks/_footer.html.twig" %}
         </div>
