--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,6 +1,6 @@
-<div id="contact" class="page-footer transparent black-text section scrollspy">
+<div id="contact" class="page-footer transparent  section scrollspy">
     <div class="container">
-        <h6 class="center-align black-text competences">CONTACT</h6>
+        <h6 class="center-align  competences">CONTACT</h6>
         <div class="row">
             <div class="col s12 l6">
                 <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
@@ -9,10 +9,10 @@
             <div class="col s12 l6">
                 <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
                 <div class="social">
-                    <a class="black-text" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
+                    <a class="" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
                         {% include "blocks/components/svgs/_linkedin.html.twig" %}
                     </a>
-                    <a class="black-text" href="https://github.com/charlottesaidi" title="Mon GitHub" > 
+                    <a class="" href="https://github.com/charlottesaidi" title="Mon GitHub" > 
                         {% include "blocks/components/svgs/_github.html.twig" %}
                     </a>
                     <a href="https://www.frontendmentor.io/profile/charlottesaidi" title="Mes Challenges FrontEnd Mentor" >
